@@ -2,4 +2,5 @@
 name = Feedback
 description = Allows site visitors and users to report issues about this site.
 package = Development
-core = 6.x
+core = 7.x
+files[] = feedback.module
