@@ -9,8 +9,17 @@
 /**
  * Implementation of hook_perm().
  */
-function feedback_perm() {
-  return array('access feedback form', 'view feedback messages');
+function feedback_permission() {
+  return array(
+    'access feedback form' => array(
+      'title' => t('Access feedback form'),
+      'description' => t('Submit feedback messages.'),
+    ),
+    'view feedback messages' => array(
+      'title' => t('View feedback messages'),
+      'description' => t('View, process, and delete submitted feedback messages.'),
+    ),
+  );
 }
 
 /**
@@ -28,7 +37,6 @@ function feedback_theme() {
  * Implementation of hook_menu().
  */
 function feedback_menu() {
-  $items = array();
   $items['admin/reports/feedback'] = array(
     'title' => 'Feedback messages',
     'description' => 'View feedback messages.',
@@ -44,53 +52,66 @@ function feedback_menu() {
  */
 function feedback_init() {
   if (user_access('access feedback form')) {
-    drupal_add_css(drupal_get_path('module', 'feedback') . '/feedback.css');
-    drupal_add_js(drupal_get_path('module', 'feedback') . '/feedback.js');
+    $path = drupal_get_path('module', 'feedback');
+    drupal_add_css($path . '/feedback.css');
+    drupal_add_js($path . '/feedback.js');
   }
 }
 
 /**
- * Implementation of hook_block().
+ * Implementation of hook_block_list().
  */
-function feedback_block($op = 'list', $delta = 0, $edit = array()) {
-  if ($op == 'list') {
-    $blocks['form'] = array('info' => t('Feedback form'));
-    return $blocks;
-  }
-  else if ($op == 'view') {
-    $block = array();
-    switch($delta) {
-      case 'form':
-        if (!user_access('access feedback form') || $_GET['q'] == 'admin/reports/feedback') {
-          break;
-        }
-        $block['subject'] = '<span class="feedback-link">' . t('Feedback') . '</span>';
-        $block['content'] = drupal_get_form('feedback_form');
+function feedback_block_list() {
+  $blocks['form'] = array(
+    'info' => t('Feedback form'),
+  );
+  return $blocks;
+}
+
+/**
+ * Implementation of hook_block_view().
+ */
+function feedback_block_view($delta = '') {
+  $block = array();
+  switch($delta) {
+    case 'form':
+      if (!user_access('access feedback form') || $_GET['q'] == 'admin/reports/feedback') {
         break;
-    }
-    return $block;
+      }
+      $block['subject'] = '<span class="feedback-link">' . t('Feedback') . '</span>';
+      $block['content'] = drupal_get_form('feedback_form');
+      break;
   }
+  return $block;
 }
 
 /**
- * Implementation of hook_footer().
+ * Implementation of hook_page_build().
  */
-function feedback_footer($main = 0) {
+function feedback_page_build(&$page) {
   if (user_access('access feedback form') && $_GET['q'] != 'admin/reports/feedback') {
-    $block = (object)module_invoke('feedback', 'block', 'view', 'form');
+    $block = (object) feedback_block_view('form');
     $block->module = 'feedback';
     $block->delta = 'form';
     $block->region = 'footer';
-    return theme('block', $block);
+    $build = $block->content;
+    unset($block->content);
+    $build += array(
+      '#block' => $block,
+      '#weight' => 0,
+      '#sorted' => TRUE,
+    );
+    $build['#theme_wrappers'][] ='block';
+
+    $page['page_bottom']['feedback'] = $build;
   }
 }
 
 /**
  * Form builder function for a user feedback form.
  */
-function feedback_form() {
-  $form = array();
-  $form['#attributes']['class'] = 'feedback-form';
+function feedback_form($form, &$form_state) {
+  $form['#attributes']['class'] = array('feedback-form');
 
   // Store the path on which this form is displayed.
   $form['location'] = array('#type' => 'value', '#value' => $_GET['q']);
@@ -99,15 +120,15 @@ function feedback_form() {
 
   $form['help'] = array(
     '#prefix' => '<div class="feedback-help">',
-    '#value' => t('If you experience a bug or would like to see an addition on the current page, feel free to leave us a message.'),
+    '#markup' => t('If you experience a bug or would like to see an addition on the current page, feel free to leave us a message.'),
     '#suffix' => '</div>',
   );
   if (user_access('view feedback messages')) {
     if (arg(0) != 'node') {
-      $feedbacks = feedback_load(array('status' => 0, 'location_masked' => feedback_mask_path($_GET['q'])));
+      $feedbacks = feedback_load(array('f.status' => 0, 'f.location_masked' => feedback_mask_path($_GET['q'])));
     }
     else {
-      $feedbacks = feedback_load(array('status' => 0, 'location' => $_GET['q']));
+      $feedbacks = feedback_load(array('f.status' => 0, 'f.location' => $_GET['q']));
     }
     if ($feedbacks) {
       $rows = '';
@@ -117,14 +138,14 @@ function feedback_form() {
       }
       $form['messages'] = array(
         '#prefix' => '<div class="feedback-messages">',
-        '#value' => $rows,
+        '#markup' => $rows,
         '#suffix' => '</div>',
       );
     }
   }
   $form['message'] = array(
     '#type' => 'textarea',
-    '#attributes' => array('class' => 'feedback-message'),
+    '#attributes' => array('class' => array('feedback-message')),
     '#title' => t('Message'),
     '#required' => TRUE,
     '#wysiwyg' => FALSE,
@@ -144,7 +165,7 @@ function feedback_form_submit($form, &$form_state) {
   feedback_add_entry($form_state['values']['message'], $form_state['values']['location']);
   $message = t('Thanks for your feedback!');
   if ($form_state['values']['ajax']) {
-    echo drupal_to_js(array('message' => $message));
+    drupal_json_output(array('message' => $message));
     exit;
   }
   else {
@@ -176,26 +197,20 @@ function feedback_format_message($entry) {
 /**
  * Load feedback entries from the database.
  *
- * @param $array
- *   A keyed array of optional where clause conditions.
+ * @param $conditions
+ *   A keyed array of optional query conditions.
  */
-function feedback_load($array) {
-  $where = $args = array();
-  if (!empty($array)) {
-    foreach ($array as $column => $value) {
-      $where[] = 'f.'. $column .' = '. (is_numeric($value) ? '%d' : "'%s'");
-      $args[] = $value;
+function feedback_load($conditions) {
+  $query = db_select('feedback', 'f')->fields('f');
+  $query->join('users', 'u', 'f.uid = u.uid');
+  $query->fields('u', array('name'));
+
+  if (!empty($conditions)) {
+    foreach ($conditions as $key => $value) {
+      $query->condition($key, $value);
     }
   }
-  $sql = "SELECT f.*, u.name FROM {feedback} f INNER JOIN {users} u ON f.uid = u.uid";
-  if (!empty($where)) {
-    $sql .= ' WHERE '. implode(' AND ', $where);
-  }
-  $result = db_query($sql, $args);
-  $entries = array();
-  while ($entry = db_fetch_object($result)) {
-    $entries[$entry->fid] = $entry;
-  }
+  $entries = $query->execute()->fetchAllAssoc('fid');
   return $entries;
 }
 
@@ -225,23 +240,43 @@ function feedback_mask_path($path) {
 function feedback_add_entry($message, $location) {
   global $user;
 
-  db_query("INSERT INTO {feedback} (uid, message, location, location_masked, url, timestamp, useragent) VALUES (%d, '%s', '%s', '%s', '%s', %d, '%s')", $user->uid, trim($message), $location, feedback_mask_path($location), url($location, array('absolute' => TRUE)), time(), $_SERVER['HTTP_USER_AGENT']);
+  return db_insert('feedback')
+    ->fields(array(
+      'uid' => $user->uid,
+      'message' => trim($message),
+      'location' => $location,
+      'location_masked' => feedback_mask_path($location),
+      'url' => url($location, array('absolute' => TRUE)),
+      'timestamp' => REQUEST_TIME,
+      'useragent' => $_SERVER['HTTP_USER_AGENT'],
+    ))
+    ->execute();
 }
 
 /**
- * Implementation of hook_user().
+ * Implementation of hook_user_cancel().
  */
-function feedback_user($op, &$edit, &$account) {
-  if ($op == 'delete') {
-    db_query('UPDATE {feedback} SET uid = 0 WHERE uid = %d', $account->uid);
+function feedback_user_cancel($edit, $account, $method) {
+  switch ($method) {
+    case 'user_cancel_reassign':
+      db_update('feedback')
+        ->fields(array('uid' => 0))
+        ->condition('uid', $account->uid)
+        ->execute();
+      break;
+
+    case 'user_cancel_delete':
+      db_delete('feedback')
+        ->condition('uid', $account->uid)
+        ->execute();
+      break;
   }
 }
 
 /**
  * Build a (sortable) form containing a checkbox for each feedback entry.
  */
-function feedback_admin_view_form() {
-  $form = array();
+function feedback_admin_view_form($form, &$form_state) {
   $status_headings = array(
     0 => t('Open feedback messages'),
     1 => t('Processed feedback messages'),
@@ -262,29 +297,34 @@ function feedback_admin_view_form() {
   }
 
   $form['feedback-messages'] = array('#tree' => TRUE);
+  $query = db_select('feedback', 'f')->extend('PagerDefault')->extend('TableSort');
+  $query->join('users', 'u', 'f.uid = u.uid');
+  $query->fields('f')
+    ->fields('u', array('name'))
+    ->limit(50);
   foreach (array(0, 1) as $status) {
-    $sql = "SELECT f.*, u.name FROM {feedback} f INNER JOIN {users} u ON f.uid = u.uid WHERE f.status = %d";
-    $count_query = "SELECT COUNT(fid) FROM {feedback} WHERE status = %d";
-    $tablesort = tablesort_sql($form['#feedback_header']);
-    $result = pager_query($sql . $tablesort, 50, $status, $count_query, $status);
+    $status_query = clone $query;
+    $result = $status_query->element($status)
+      ->condition('f.status', $status)
+      ->execute()->fetchAllAssoc('fid');
 
     $form['feedback-messages'][$status] = array(
       '#type' => 'fieldset',
       '#title' => $status_headings[$status],
       '#collapsible' => TRUE,
       '#collapsed' => $status,
-      '#attributes' => array('class' => 'feedback-messages'),
+      '#attributes' => array('class' => array('feedback-messages')),
     );
-    while ($entry = db_fetch_object($result)) {
-      $form['feedback-messages'][$status][$entry->fid] = array(
+    foreach ($result as $fid => $entry) {
+      $form['feedback-messages'][$status][$fid] = array(
         '#type' => 'checkbox',
         '#return_value' => 1,
         '#default_value' => FALSE,
       );
-      $form['feedback-messages'][$status][$entry->fid]['location'] = array('#value' => l(truncate_utf8($entry->location, 32, FALSE, TRUE), $entry->url));
-      $form['feedback-messages'][$status][$entry->fid]['date'] = array('#value' => format_date($entry->timestamp, 'small'));
-      $form['feedback-messages'][$status][$entry->fid]['user'] = array('#value' => theme('username', $entry));
-      $form['feedback-messages'][$status][$entry->fid]['message'] = array('#value' => feedback_format_message($entry));
+      $form['feedback-messages'][$status][$fid]['location'] = array('#markup' => l(truncate_utf8($entry->location, 32, FALSE, TRUE), $entry->url));
+      $form['feedback-messages'][$status][$fid]['date'] = array('#markup' => format_date($entry->timestamp, 'small'));
+      $form['feedback-messages'][$status][$fid]['user'] = array('#markup' => theme('username', $entry));
+      $form['feedback-messages'][$status][$fid]['message'] = array('#markup' => feedback_format_message($entry));
     }
   }
   $form['submit'] = array('#type' => 'submit', '#value' => t('Submit'));
@@ -294,7 +334,7 @@ function feedback_admin_view_form() {
 /**
  * Output a sortable table containing all feedback entries.
  */
-function theme_feedback_admin_view_form(&$form) {
+function theme_feedback_admin_view_form($form) {
   $output = '';
   foreach (element_children($form['feedback-messages']) as $status) {
     $item = &$form['feedback-messages'][$status];
@@ -321,14 +361,14 @@ function theme_feedback_admin_view_form(&$form) {
     }
     // Inject the table.
     $item['messages'] = array(
-      '#value' => theme('table', $form['#feedback_header'], $rows) . theme('pager', array(), 50, $status),
+      '#markup' => theme('table', $form['#feedback_header'], $rows) . theme('pager', array(), $status),
       '#weight' => -1,
     );
     // Render the fieldset.
     $output .= drupal_render($item);
   }
   // Render internal FAPI and potential extra form elements.
-  $output .= drupal_render($form);
+  $output .= drupal_render_children($form);
   return $output;
 }
 
@@ -347,7 +387,12 @@ function feedback_admin_view_form_submit($form, &$form_state) {
   }
   // Update status of entries in database.
   foreach ($update as $fid => $value) {
-    db_query("UPDATE {feedback} SET status = %d WHERE fid = %d", $value, $fid);
+    db_update('feedback')
+      ->fields(array(
+        'status' => $value,
+      ))
+      ->condition('fid', $fid)
+      ->execute();
   }
 }
 
